# headroom

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.backup-rclone.yml  docker-compose.http80.yml  docker-compose.https-lan.yml  docker-compose.https.yml  docker-compose.mdns.yml  docker-compose.yml  package-lock.json  pyproject.toml
analysis/: 00-READ-FIRST.md  00-triage-dispatch.md  01-diagnosis.md  02-security.md  03-design-doc.md  intake.md  open-questions.md
analysis/specialists/: auscultator.signals.md  doppler.flows.md  lumen.deepdive.md  roentgen.structure.md  rorschach.intent.md  stratum.layers.md
docs/: OPERATIONS.md  USAGE.md
docs/superpowers/specs/: 2026-07-07-analysis-fallback-design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: auth.ts  cases.ts  client.ts  hats.ts  rooms.ts  search.ts  settings.ts
frontend/src/lib/: webauthn.ts
frontend/src/pages/: AddHatPage.tsx  BulkImportPage.tsx  CaseDetailPage.tsx  CasesPage.tsx  EditCasePage.tsx  EditHatPage.tsx  HatDetailPage.tsx  HatsPage.tsx  HomePage.tsx  LoginPage.tsx  NewCasePage.tsx  RoomsPage.tsx  SearchPage.tsx  SettingsPage.tsx  SharePage.tsx  ValuationPage.tsx
frontend/src/styles/: app.css  tokens.css
frontend/src/types/: index.ts
hardware/: README.md
scripts/: setup.sh
src/headroom/: app.py  auth.py  config.py  database.py
src/headroom/models/: __init__.py  activity_log.py  app_setting.py  case.py  catalog.py  hat.py  hat_color.py  import_job.py  room.py  user.py  wear_log.py
src/headroom/routes/: __init__.py  admin.py  auth.py  cases.py  hats.py  health.py  import_jobs.py  meta.py  public.py  rooms.py  search.py  settings.py  share.py  share_links.py
src/headroom/schemas/: case.py  hat.py  room.py  search.py  settings.py
src/headroom/services/: activity_service.py  auth_service.py  background_removal.py  backup_service.py  case_service.py  (+17 more)
tests/: conftest.py  test_activity_log.py  test_admin.py  test_auth.py  test_backup_upload.py  test_capacity.py  test_cases.py  test_catalog.py  test_disposition.py  test_ebay.py  test_fallback_analysis.py  test_find_the_hat.py  test_hats.py  test_health.py  test_import.py  test_mdns.py  test_melin_recap.py  test_photos.py  test_pipeline_e2e.py  test_prod_hardening.py  test_rooms.py  test_schema_consistency.py  test_search.py  test_security.py  test_settings_api.py  test_wear_and_labels.py
(+17 files in other folders)
