[project]
name = "headroom"
version = "0.6.1"
description = "Headroom — AI-powered hat collection tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic-settings",
    "python-multipart",
    "Pillow",
    "pillow-heif",
    "anthropic>=0.40.0",
    "rembg[cpu]>=2.0.50",
    "onnxruntime",
]

[dependency-groups]
dev = [
    "pytest",
    "anyio[trio]",
    "pytest-anyio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/headroom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
