[project]
name = "headroom"
version = "1.2.0"
description = "Headroom — AI-powered hat collection tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic-settings",
    "python-multipart",
    "Pillow",
    "pillow-heif",
    "anthropic>=0.40.0",
    "rembg[cpu]>=2.0.50",
    "onnxruntime",
    "argon2-cffi>=25.1.0",
    "webauthn>=3.0.0",
    "qrcode>=8.2",
]

[dependency-groups]
dev = [
    "pytest",
    "anyio[trio]",
    "pytest-anyio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/headroom"]

[tool.pytest.ini_options]
testpaths = ["tests"]
